<resources>
    <string name="app_name">pornprapa3</string>

    <string name="tv_header1">กรุณากรอกข้อมูล</string>
    <string name="tv_fname">ชื่อ</string>
    <string name="tv_lname">นามสกุล</string>
    <string name="tv_nname">ชื่อเล่น</string>
    <string name="tv_sex">เพศ</string>
    <string name="tv_address">ที่อยู่</string>

    <string name="btn_sender">ส่งข้อมูล</string>
    <string name="btn_clear">ล้างข้อมูล</string>
    <string name="btn_closs_app">ปิด</string>

    <string name="tv_header2">ผลลัพธ์</string>
    <string name="btn_back">กลับ</string>
</resources>
